--- a/templates/create_highlight.html
+++ b/templates/create_highlight.html
@@ -6,7 +6,7 @@
 {% include 'navbar.html' %}
     <div class="container mt-xl-5">
         <center>
-        
+         <h1 style="margin-bottom:5vh">Create Product Highlight</h1>
             <form method="post" action="">
                 {% csrf_token %}
                 <table>
