Fix typo create to show

--- a/templates/create_highlight.html
+++ b/templates/create_highlight.html
@@ -16,7 +16,7 @@
             </form>
                 <button class = "btn btn-primary btn-block">Submit</button>
             <button type="submit" >
-                <a href="{% url 'highlight:create-highlight' %}">Create Highlight</a>
+                <a href="{% url 'highlight:show-highlight' %}">Show Highlight</a>
             </button>
                 
         </center>
